gitops/applications/rag/base/postgres-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
    app.kubernetes.io/component: postgres
    app.kubernetes.io/instance: postgres
  name: postgres
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 5432-tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    deployment: postgres
  sessionAffinity: None
  type: ClusterIP
